medidas para mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
       nome="Keywords"
       content="Germano Zucule, germano zucule,GermanoZucule,germanozucule, Germano Fernando Zucule,germano fernando zucule,germanofernandozucule,Portifólio,portifólio,portifolio,Portifolio,Desenvolvedor,forontend,disign"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaquerys.css" />
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="reveal.js" defer></script>
@@ -20,6 +25,7 @@
     <header class="cabeca">
       <h1 id="click" class="nome"><span class="nomeefect">G</span>Z</h1>
       <nav>
+        <img id="menu" src="./img/Icons/menu.svg" alt="" />
         <ul>
           <li><a href="#sobre">Sobre-mim</a></li>
           <li><a href="#habilidades">habilidades</a></li>
@@ -27,6 +33,14 @@
           <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
+      <div class="hamburguer hidden">
+        <ul>
+          <li><a href="#sobre">Sobre-mim</a></li>
+          <li><a href="#habilidades">habilidades</a></li>
+          <li><a href="#projectos">Projectos</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </div>
     </header>
     <!-- senção inicial -->
 
