Reparando media querys

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="cabeca">
       <h1 id="click" class="nome"><span class="nomeefect">G</span>Z</h1>
       <nav>
-        <img id="menu" src="./img/Icons/menu.svg" alt="" />
+        <img id="menu" class="imghidden" src="./img/Icons/menu.svg" alt="" />
         <ul>
           <li><a href="#sobre">Sobre-mim</a></li>
           <li><a href="#habilidades">habilidades</a></li>
